--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,22 +1,19 @@
 .header_man_div {
-
-display: grid;
-grid-template-columns: 1fr 1fr;
-justify-content: center;
-align-items: center;
-width: 95%;
-margin: 0 auto;
-position: relative;
-top: 20px;
-background-color: #F3F3F3E5;
-background-color: rgb(243 243 243 / 90%);
-height: 65px;
-border-radius: 20px;
-
-
-
-}
-
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    margin: 0 auto;
+    position: sticky; /* Sticky positioning */
+    top: 20px; /* Stick to the top of the viewport */
+    background-color: rgb(243 243 243 / 90%);
+    height: 75px;
+    border-radius: 20px;
+    z-index: 100; /* Ensures it stays above other elements */
+    transition: height 0.1s ease;
+  }
+  
 .logo_div {
 
 padding-left: 5%;
