--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -58,7 +58,6 @@ margin: 0;
         align-items: center;
         gap: 2%;
         padding: 2%;
-        z-index: -1;
       }
 
       .form_label_banner {
@@ -176,3 +175,13 @@ padding-left: 10px;
 
 
 
+.cards_1 {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+
+.cards_1.show-card {
+  opacity: 1;
+  transform: translateY(0);
+}
