all done including responsiveness !

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -135,10 +135,22 @@ padding-top: 3%;
 
 .navigation_links {
 
-    color: #FFFFFF;
+    color: #FFFFFF ! Important;
     font-size: 16px;
     font-weight: 200;
     padding: 3px;
+
+
+
+}
+
+
+.navigation_links a {
+
+  color: #FFFFFF ! Important;
+  font-size: 16px;
+  font-weight: 200;
+  padding: 3px;
 
 
 
