--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -158,7 +158,7 @@ flex-direction: column;
 
 .form_black {
 
-margin-top: 250px;
+margin-top: 155px;
 width: 90%;
 min-height: 200px;
 padding: 15px;
@@ -170,7 +170,7 @@ padding-bottom: 30px;
 .cards_main_div {
 
 
-margin-top: 500px;
+margin-top: 630px;
 padding-bottom: 20px;
 
 
@@ -179,8 +179,8 @@ padding-bottom: 20px;
 
 .second_component_form {
 
-
-display: none;
+padding-top: 30px;
+padding-bottom: 10px;
 
 
 }
