--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -158,7 +158,7 @@ flex-direction: column;
 
 .form_black {
 
-margin-top: 155px;
+margin-top: 215px;
 width: 90%;
 min-height: 200px;
 padding: 15px;
@@ -205,6 +205,46 @@ text-align: center;
 
 
 }
+
+
+.react-international-phone-input-container .react-international-phone-country-selector-button {
+
+  border-radius: 15px;
+  width: 60px;
+  height: 38px;
+  
+  }
+  .react-international-phone-country-selector {
+  
+      width: 60px;
+  
+  
+  }
+  .react-international-phone-input-container .react-international-phone-input {
+  
+  
+  border-radius: 15px;
+  margin-left: 5px;
+  height: 38px;
+  }
+  
+  
+  .react-international-phone-country-selector-button__dropdown-arrow {
+  
+  border: none;
+  
+  
+  }
+  .react-international-phone-country-selector-button__button-content {
+  
+  display:block !Important;
+  
+  
+  }
+  
+  
+  
+  
 
 
 
